--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,12 +19,13 @@ exclude = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.8.1,<4.0"
+python = ">=3.9,<4.0"
 requests = "^2.31.0"
 python-dotenv = "^1.0.0"
 jsonschema = "^4.19.1"
 pytz = "^2023.3"
 argparse = "^1.4.0"
+feedparser = "^6.0.10"
 pydantic-ai = {version = "^0.0.14", optional = true}
 
 [tool.poetry.extras]
